Name now valid, but still a placeholder

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "REPLACE THIS NAME",
+  "name": "placeholder-name",
   "version": "1.0.0",
   "description": "WHAT DO I DO?",
   "main": "index.js",
